# hamg-log

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: django.yml
ham_logger/: apps.py  forms.py  models.py  urls.py  views.py
ham_logger/migrations/: 0001_initial.py
ham_logger/tests/: test_ping.py  test_views.py
hamg_log/: asgi.py  settings.py  urls.py  wsgi.py
