[tool.poetry]
name = "hamg-log"
version = "0.1.0"
description = ""
authors = ["Ryan Jones <ryan.jones26@gmail.com>"]
readme = "README.md"
packages = [{include = "hamg_log"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

